--- a/config/config.json
+++ b/config/config.json
@@ -1,16 +1,16 @@
 {
   "development": {
-    "database": "express_auth_development",
+    "database": "express_lunch_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "database": "express_auth_test",
+    "database": "express_lunch_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "database": "express_auth_production",
+    "database": "express_lunch_production",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
