--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
-    "sequelize": "^6.4.0"
+    "sequelize": "^6.4.0",
+    "sequelize-cli": "^6.2.0"
   },
   "description": "Express authentication template using Passport + flash messages + custom middleware",
   "directories": {
